# mid_qr_code_lib

./: CHANGELOG.md  Cargo.toml  README.md  index.html  scanner.html
.github/workflows/: apply-replacememts.yml  build-wasm.yml  generate-structure.yml  pages.yml  publish-nuget.yml
.mdix/replacements/: replacements (1).mdix  replacements (2).mdix
blazor/js/js/: midQrModule.js
blazor/wasm/wasm/: mid_qr_wasm_bg.wasm
crates/mid-qr-core/src/: error.rs  generate.rs  lib.rs  msx.rs
crates/mid-qr-wasm/src/: lib.rs
css/: layout.css  panels.css  variables.css
docs/: api.md  architecture.md  getting-started.md
js/: app.js  preview.js
npm/: package-lock.json  package.json
npm/src/: generator.ts  index.ts  scanner.ts
site/: index.html  scanner.html
site/css/: components.css  panels.css  reset.css  responsive.css
site/js/: app.js  controls.js  download.js  mid-qr.js  preview.js  qr-engine.js  scanner-page.js
site/wasm/: mid_qr_wasm.js  mid_qr_wasm_bg.wasm
test/: index.html  qr_test.rs
tests/: index.html
wasm/: mid_qr_wasm.js
wrappers/blazor/: IMidQrIconProvider.cs  MidQr.Blazor.csproj  MidQrCode.razor  MidQrCode.razor.cs  MidQrData.cs  MidQrImageHelpers.cs  MidQrScanner.razor  MidQrScanner.razor.cs  ServiceCollectionExtensions.cs  _Imports.razor
wrappers/blazor/wwwroot/js/: midQrModule.js
wrappers/blazor/wwwroot/wasm/: mid_qr_wasm.d.ts
