[workspace]
members = [
    "crates/mid-qr-core",
    "crates/mid-qr-wasm",
]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["MidManStudio"]
license    = "MIT"
repository = "https://github.com/MidManStudio/mid-qr"

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
# panic = "abort" intentionally removed.
# With panic="unwind", wasm-bindgen wraps every exported function in
# std::panic::catch_unwind so panics are caught at the JS boundary.
strip = true
